start of shader

--- a/VS2012/Assignment1.vcxproj.filters
+++ b/VS2012/Assignment1.vcxproj.filters
@@ -155,4 +155,9 @@
       <Filter>ExtInc</Filter>
     </Library>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="GeometryShader.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+  </ItemGroup>
 </Project>
